[package]
name = "tokenomic"
version = "0.1.0"
authors = ["blocksurf <blocksurf@protonmail.com>"]
edition = "2021"
description = "A Bitcoin lib for interacting with tokens"
repository = "https://github.com/blocksurf/tokenomic"
license = "MIT"
categories = ["api-bindings", "cryptography::cryptocurrencies", "network-programming", "wasm"]
keywords = ["bitcoin", "1sat", "lock", "ordinals", "21e8"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
